# gensokio

./: Cargo.toml  flake.nix
assets/: bullet-kunai.aseprite  bullet-large.aseprite  bullet-shard.aseprite  bullet.aseprite  power.aseprite  reimu.aseprite  score.aseprite
src/: bullet.rs  main.rs  network.rs  player.rs
